# Termscope-

./: .gitignore  LICENSE  MVP_FILE_STRUCTURE.md  PRD.md  README.md  TASKS.md  pyproject.toml
scripts/: capture_dashboard_screenshot.py
termscope/: app.py  constants.py  models.py
termscope/collectors/: metrics.py  processes.py  system_info.py
termscope/screens/: confirm_kill.py  dashboard.py  processes.py
termscope/styles/: app.tcss
termscope/utils/: distro_art.py  distro_icons.py  distro_theme.py  formatters.py  os_release.py  process_safety.py  rates.py
termscope/widgets/: distro_panel.py  footer_bar.py  header_bar.py  metrics_panel.py  process_table.py
tests/: test_collectors.py  test_distro_art.py  test_distro_theme.py  test_formatters.py  test_os_release.py  test_process_safety.py  test_process_table.py  test_processes_screen_state.py  test_processes_sort_toggle.py
