[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termscope"
version = "0.1.0"
description = "A Textual-based Linux/server monitoring dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.58.0",
  "psutil>=5.9.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.9.0",
]

[project.scripts]
termscope = "termscope.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["termscope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
